--- a/style.css
+++ b/style.css
@@ -23,19 +23,19 @@ p {
 }
 
 button {
-  right: 10px;
-  cursor: pointer;
-  bottom: 75px;
-  color: rgb(200, 50, 98);
-  position: fixed;
-  width: 75px;
-  height: 75px;
   appearance: none;
+  cursor: pointer;
   background: white;
-  font-size: 10px;
   border-radius: 50%;
   border: 0;
+  font-size: 10px;
   box-shadow: 0 0 5px 2px rgba(0, 0, 0, 0.1); 
+  color: rgb(200, 50, 98);
+  height: 75px;
+  position: fixed;
+  right: 10px;
+  top: 75px;
+  width: 75px;
   z-index: 10;
 }
 
