--- a/style.css
+++ b/style.css
@@ -6,9 +6,9 @@ body {
 }
 
 body, body * {
-    margin: 0;
-    padding: 0;
   box-sizing: border-box;
+  margin: 0;
+  padding: 0;
 }
 
 .wrap {
@@ -22,23 +22,6 @@ p {
   margin-bottom: 1em;
 }
 
-button {
-  appearance: none;
-  cursor: pointer;
-  background: white;
-  border-radius: 50%;
-  border: 0;
-  font-size: 10px;
-  box-shadow: 0 0 5px 2px rgba(0, 0, 0, 0.1); 
-  color: rgb(200, 50, 98);
-  height: 75px;
-  position: fixed;
-  right: 10px;
-  top: 75px;
-  width: 75px;
-  z-index: 10;
-}
-
 .main {
   background: white;
   position: relative;
@@ -46,6 +29,27 @@ button {
   padding: 20px;
   transform: translateX(0);
 }
+
+.button {
+  appearance: none;
+  background: white;
+  border-radius: 50%;
+  border: 0;
+  box-shadow: 0 0 5px 2px rgba(0, 0, 0, 0.1); 
+  color: rgb(200, 50, 98);
+  cursor: pointer;
+  font-size: 10px;
+  height: 75px;
+  padding: 30px 0;
+  position: fixed;
+  right: 10px;
+  text-align: center;
+  top: 75px;
+  width: 75px;
+  z-index: 10;
+}
+
+
 
 .nav {
   background: black;
@@ -62,28 +66,27 @@ button {
 }
 
 .nav ul {
-    column-count: 2;
-    list-style: none;
+  column-count: 2;
+  list-style: none;
 }
 
 .nav li {
-    margin-bottom: 12px;
+  margin-bottom: 12px;
 }
 
 .nav li a {
-    color: white;
-    text-decoration: none;
-    border-bottom: 1px solid red;
+  color: white;
+  border-bottom: 1px solid red;
+  text-decoration: none;
 }
 
 
 .wrap.snapping .main,
 .wrap.snapping .button{
-    transition: all 0.5s ease;
+  transition: all 0.5s ease;
 }
 
 .wrap.nav-open .main {
   transform: translateX(-500px);
   transition: all 0.5s ease;
-
 }
